update bulletins and processing/download scripts

--- a/data/raw/html/audio-0013.html
+++ b/data/raw/html/audio-0013.html
@@ -298,7 +298,8 @@
 											<td>Hindi</td>
 											<td>07:20</td>
 											<td>
-																									No file available																							</td>
+<audio src="NA" preload="none" controls style="width: 250px;"></audio>
+												</td>
 											<td>09 Aug 2025</td>
 										</tr>
 																			<tr>
