--- a/data/raw/html/audio-0014.html
+++ b/data/raw/html/audio-0014.html
@@ -343,7 +343,8 @@
 											<td>Kokborok</td>
 											<td>07:40</td>
 											<td>
-																									No file available																							</td>
+<audio src="NA" preload="none" controls style="width: 250px;"></audio>
+												</td>
 											<td>08 Aug 2025</td>
 										</tr>
 																	</tbody>
