--- a/data/raw/html/audio-0020.html
+++ b/data/raw/html/audio-0020.html
@@ -280,7 +280,8 @@
 											<td>Gojri</td>
 											<td>17:50</td>
 											<td>
-																									No file available																							</td>
+<audio src="NA" preload="none" controls style="width: 250px;"></audio>
+												</td>
 											<td>07 Aug 2025</td>
 										</tr>
 																			<tr>
